tests/rosetta/transpiler/FS/b-zier-curves-intersections.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/b-zier-curves-intersections.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'B-zier-curves-intersections' based on the file name 'b-zier-curves-intersections.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/b-zier-curves-intersections.fs(207,66): error FS1129: The type 'Map<string,QuadCurve>' does not contain a field 'p'

/workspace/mochi/tests/rosetta/transpiler/FS/b-zier-curves-intersections.fs(220,24): error FS0001: This expression was expected to have type
    bool    
but here has type
    obj    
